--- a/TareaAndroid3/Tarea3/app/src/main/AndroidManifest.xml
+++ b/TareaAndroid3/Tarea3/app/src/main/AndroidManifest.xml
@@ -16,6 +16,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity2confragment"
+            android:label="@string/title_activity_main_activity2confragment" >
+        </activity>
+        <activity
+            android:name=".MainActivit2Activity"
+            android:label="@string/title_activity_main_activit2" >
+        </activity>
     </application>
 
 </manifest>
